[gd_scene load_steps=5 format=2]

[ext_resource path="res://ItemSpawn.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Items/Heart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Items/Speed.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Items/Shield.tscn" type="PackedScene" id=4]

[node name="ItemSpawn" type="Node2D"]
script = ExtResource( 1 )
Heart = ExtResource( 2 )
Speed = ExtResource( 3 )
Shield = ExtResource( 4 )

[node name="HeartTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HeartTimerSecondary" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SpeedTimerSecondary" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SlowTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="SlowTimerSecondary" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ShieldTimerSecondary" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="HeartTimer" to="." method="_on_HeartTimer_timeout"]
[connection signal="timeout" from="HeartTimerSecondary" to="." method="_on_HeartTimer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="SpeedTimerSecondary" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="SlowTimer" to="." method="_on_SlowTimer_timeout"]
[connection signal="timeout" from="SlowTimerSecondary" to="." method="_on_SlowTimer_timeout"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="timeout" from="ShieldTimerSecondary" to="." method="_on_ShieldTimer_timeout"]
